# hy-home.infra

./: .editorconfig  .gitignore  README.md  docker-compose.yml.format  docker-compose.yml.include-format
.github/workflows/: ci-cd.yaml
Doc/: Windows-Network-IP.md
Docker/: README.md  docker-compose.Authentication.yml  docker-compose.Automation.yml  docker-compose.Data-Collector.yml  docker-compose.Design-System.yml  docker-compose.Incident-management.yml  docker-compose.Models.yml  docker-compose.Projects.yml  docker-compose.QA.yml  docker-compose.Storage.yml  docker-compose.Supabase.yml  docker-compose.Sync.yml  docker-compose.Workflow.yml  docker-compose.databases.yml  docker-compose.devops.yml  docker-compose.etc.yml  docker-compose.message-broker.yml  docker-compose.observability.yml  docker-compose.searchengine.yml  docker-compose.web-server.yml  docker-compose.wiki.yml  docker-compose.yml
Docker/Authentication/: docker-compose.authelia.yml  docker-compose.keycloak.yml
Docker/Automation/: docker-compose.automatisch.yml  docker-compose.huginn.yml  docker-compose.n8n.yml
Docker/Data-Collector/: docker-compose.data-prepper.yml  docker-compose.fluentbit.yml  docker-compose.fluentd.yml  (+3 more)
Infra/: README.md  docker-compose.yml
Projects/Django/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
Projects/FastAPI/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
_Archive/: docker-compose.mattermost.yml
_Docs/: Airflow.md  MongoDB.md  MySQL.md  Proxy-SQL.md  Redis.md  Valkey.md  Windmill.md  dispatch.md  harbor.md
k8s/: README.md  metallb-config.yaml
(+301 files in other folders)
