[tool.poetry]
    authors    =["Hyunyoun Jo <chochyjj@gmail.com>"]
    description="Django"
    name       ="Project"
    readme     ="README.md"
    version    ="0.1.0"

    [tool.poetry.dependencies]
        fastapi        ="^0.121.2"
        kafka-python   ="^2.2.15"
        protobuf       ="^6.33.1"
        psycopg2-binary="^2.9.11"
        pydantic       ="^2.12.4"
        python         ="^3.12"
        redis          ="^7.0.1"
        requests       ="^2.32.5"
        uvicorn        ="^0.38.0"

    [tool.poetry.group.dev.dependencies]
        pytest="^9.0.1"
        ruff  ="^0.14.5"

[build-system]
    build-backend="poetry.core.masonry.api"
    requires     =["poetry-core>=2.0.0,<3.0.0"]
